--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>4.0.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<packaging>war</packaging>
